# OpenOcean

./: CMakeLists.txt  README.md  clean.bat
Models/: sb.aseprite  sub.blend
Models/GPO/: GPO.blend  GPO.blend1  GPO.gltf  pillar.blend  pillar.blend1  pillar.gltf
Models/_Textures/: atlas.pdn  sub.blend
Models/anemone/: anemone.blend  anemone.blend1  anemone.mtl
Models/beach/: beach.blend  beach.blend1  beach.gltf
Models/beach_item/: beach_item.mtl  readme.md  uploads_files_70608_beach.blend  uploads_files_70608_beach.blend1
Models/beacon/: beacon.blend  beacon.blend1  beacon.gltf  beacon.mtl
Models/boid/: boid.blend  boid.blend1  boid.dae  boid.mtl
Models/box/: box.blend  box.blend1  box.mtl
Models/building1/: building1.blend  building1.blend1  building1.gltf  building1.mtl
Models/building2/: building2.blend  building2.blend1  building2.mtl
Models/building3/: building3.blend  (+2 more)
Shaders/: anim.comp  blank.frag  blank.vert  boids.comp  boneMesh.frag  boneMesh.vert  cubemap.vert  main.frag  main.vert  staticMesh.frag  staticMesh.vert  test.comp  tfs.frag  tvs.vert  variantMesh.frag  variantMesh.vert  variantMesh_c.vert  variantMesh_g.vert  wireframe.frag  wireframe.vert
src/: boid.cpp  boid.h  boidinfo.cpp  boidinfo.h  bonemesh.cpp  bonemesh.h  box.h  camera.cpp  camera.h  cubemap.cpp  cubemap.h  flock.h  lighting.cpp  lighting.h  main.cpp  main.h  mesh.cpp  mesh.h  octree.cpp  octree.h  player.cpp  player.h  shader.cpp  shader.h  sm.cpp  sm.h  staticmesh.cpp  staticmesh.h  texture.cpp  texture.h  util.cpp  util.h  variantmesh.cpp  variantmesh.h
(+151 files in other folders)
